packages/storybook/src/templates/index.scss
.frameless-theme {
  --utrecht-space-around: 1;

  .utrecht-paragraph:last-child {
    --utrecht-paragraph-margin-block-end: 0;
  }

  .utrecht-heading-3:first-child {
    --utrecht-heading-3-margin-block-start: 0;
  }

  .utrecht-nav-bar {
    margin-block-start: 32px;
  }

  details[open] summary {
    margin-block-end: 24px;
  }

  .utrecht-img {
    max-inline-size: 100%;
  }

  --frameless-illustration-color: #122529;
  --frameless-illustration-background-color: white;
  --frameless-illustration-floor-color: #a9c7cb;
  --frameless-illustration-background-detail-color: #295960;
  --frameless-illustration-detail-color: #51929a;
}

// DARKMODE
@mixin frameless-theme--dark {
  --utrecht-document-background-color: var(--utrecht-document-inverse-background-color);
  --utrecht-document-color: var(--utrecht-document-inverse-color);
  --utrecht-paragraph-color: var(--utrecht-document-inverse-color);
  --utrecht-paragraph-lead-color: var(--utrecht-document-inverse-color);
  --utrecht-heading-1-color: var(--utrecht-document-inverse-color);
  --utrecht-heading-2-color: var(--utrecht-document-inverse-color);
  --utrecht-heading-3-color: var(--utrecht-document-inverse-color);
  --utrecht-heading-4-color: var(--utrecht-document-inverse-color);
  --utrecht-heading-5-color: var(--utrecht-document-inverse-color);
  --utrecht-heading-6-color: var(--utrecht-document-inverse-color);
  --utrecht-link-color: var(--frameless-color-petrol-70);
  --utrecht-link-hover-color: var(--frameless-color-petrol-80);
  --utrecht-link-text-decoration-color: currentColor;
  --frameless-card-background-color: var(--utrecht-document-inverse-background-color);
  --frameless-card-border-color: var(--frameless-color-gray-60);
  --frameless-card-border-width: 1px;
  --frameless-card-box-shadow-color: var(--frameless-color-black);
  --frameless-section-alternate-background-color: var(--frameless-color-petrol-20);
  --frameless-section-alternate-card-background-color: var(--utrecht-document-inverse-background-color);
  --frameless-section-alternate-card-border-width: 1px;
  --frameless-section-alternate-card-border-color: var(--frameless-color-gray-60);
  summary {
    color: var(--utrecht-document-inverse-color);
  }

  --frameless-illustration-color: #a9c7cb;
  --frameless-illustration-background-color: #122529;
  --frameless-illustration-floor-color: #a9c7cb;
  --frameless-illustration-background-detail-color: #122529;
  --frameless-illustration-detail-color: #51929a;
}

@media (prefers-color-scheme: dark) {
  .frameless-theme--media-query {
    @include frameless-theme--dark;
  }
}

.frameless-theme--dark {
  @include frameless-theme--dark;
}

